# active_machine_learning

./: .gitignore  README.md  controller.py  dataset.py  dataset_dwonload.py  lint.sh  main.py  notes.md  pyproject.toml  results.csv  results_comparison_cifar10_epochs_100_batch_size_16_runs_10.png.csv  results_comparison_cifar10_epochs_100_batch_size_32_runs_10.png.csv  results_comparison_eurosat_epochs_10_batch_size_32_runs_5.png.csv
methods/: __init__.py  least_confidence_sampling.py  uncertainty_sampling.py
results/: results.csv  results_comparison_cifar10_epochs_100_batch_size_128_runs_1.png.csv  results_comparison_cifar10_epochs_100_batch_size_128_runs_10.png.csv  results_comparison_cifar_epochs_100_batch_size_32_runs_10_compresion_1.csv  results_comparison_cifar_epochs_100_batch_size_32_runs_10_compresion_10.csv  results_comparison_cifar_epochs_100_batch_size_32_runs_1_compresion_1.csv  results_comparison_cifar_epochs_100_batch_size_32_runs_1_compresion_10.csv  results_comparison_cifar_epochs_100_batch_size_32_runs_1_compresion_50.csv  results_comparison_eurosat_epochs_100_batch_size_2_runs_1_compresion_10.csv  results_comparison_eurosat_epochs_100_batch_size_32_runs_1_compresion_10.csv
src/: controller.py  dataset.py  helpers.py  main.py  model.py  training.py  training_helpers.py
src/methods/: __init__.py  entropy_sampling.py  kl_divergence.py  least_confidence_sampling.py  margin_sampling.py  query_by_commitee.py  random_sampling.py  ratio_of_confidence.py  uncertainty_sampling.py  vote_entropy.py
tests/: conftest.py  test_controller.py
