[project]
name = "active-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "matplotlib>=3.10.9",
    "mypy>=2.1.0",
    "pandas>=3.0.3",
    "ruff>=0.15.16",
    "scikit-learn>=1.9.0",
    "torchvision>=0.27.0",
]

[mypy]
ignore_missing_imports = true
